# affect-engine

./: README.md  pyproject.toml
affect_engine/: __init__.py  blender.py  config.py  engine.py  extractor.py
tests/: smoke.py
