[project]
name = "affect-engine"
version = "0.1.0"
description = "Real-time affect generation engine producing continuous VADCC"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.2.0",
    "sentence-transformers>=5.2.0",
    "transformers>=5.1.0",
    "huggingface-hub>=1.4.0",
    "textstat>=0.7.3",
    "nltk>=3.8.1",
    "datasets>=2.0.0"
]

[project.optional-dependencies]
anchor = [
    "ollama>=0.1.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["affect_engine"]
